@@ -1113,7 +1113,6 @@ class Converter(Decoder):
 		self.mp3_bitrate = None
 		self.mp3_mode = None
 		self.mp3_quality = None
-		self.flac_speed = None
 
 		self.output_resample = output_resample
 		self.resample_rate = resample_rate
@@ -1204,13 +1203,8 @@ class Converter(Decoder):
 	def set_mp3_quality(self, quality):
 		self.mp3_quality = quality
 
-	def set_flac_speed(self, speed):
-		self.flac_speed = speed
-
 	def add_flac_encoder(self):
-		s = "flacenc"
-		if self.flac_speed == 1:
-			s += " quality=9"
+		s = "flacenc mid-side-stereo=true quality=8"
 		return s
 
 	def add_wav_encoder(self):
@@ -1609,10 +1603,6 @@ class PreferencesDialog:
 		for k, v in quality_setting.iteritems():
 			if abs(quality-k) < 0.01:
 				w.set_active(v)
-
-		w = glade.get_widget("flac_speed")
-		speed = self.get_int("flac-speed")
-		w.set_active(speed)
 			
 		self.mp3_quality = glade.get_widget("mp3_quality")
 		self.mp3_mode = glade.get_widget("mp3_mode")
@@ -1918,10 +1908,6 @@ class PreferencesDialog:
 		
 		self.update_example()
 
-	def on_flac_speed_changed(self, combobox):
-		self.set_int("flac-speed", combobox.get_active())
-		self.update_example()
-
 	def change_mp3_mode(self, mode):
 	
 		keys = { "cbr": 0, "abr": 1, "vbr": 2 }
@@ -2067,7 +2053,6 @@ class ConverterQueue(TaskQueue):
 			                        self.window.prefs.get_int("output-resample"),
 			                        self.window.prefs.get_int("resample-rate"))
 		c.set_vorbis_quality(self.window.prefs.get_float("vorbis-quality"))
-		c.set_flac_speed(self.window.prefs.get_int("flac-speed"))
 		
 		quality = {
 			"cbr": "mp3-cbr-quality",
